--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -101,8 +101,7 @@ jobs:
         shell: bash
         run: |
           cd "${{ steps.strings.outputs.build-output-dir }}"
-          cmake --build . --target package
-
+          cmake --build . --target package --config "${{ matrix.build_type }}"
       - name: Upload packages
         if: matrix.build_type == 'Release'
         uses: actions/upload-artifact@v4
